--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -41,14 +42,21 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@supabase/supabase-js": "^2.47.8",
     "@tanstack/react-query": "^5.56.2",
+    "@types/file-saver": "^2.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cohere-ai": "^7.15.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.x.x",
     "embla-carousel-react": "^8.3.0",
+    "express": "^4.21.2",
+    "file-saver": "^2.0.5",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.451.0",
+    "multer": "^1.4.5-lts.1",
     "next-themes": "^0.3.0",
+    "openai": "^4.x.x",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -80,5 +88,10 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
-  }
+  },
+  "description": "**URL**: https://lovable.dev/projects/77fa79a2-589d-43f4-86a6-1ce4716c40b8",
+  "main": "eslint.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
