--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
@@ -48,12 +49,14 @@
     "cmdk": "^1.0.0",
     "cohere-ai": "^7.15.0",
     "date-fns": "^3.6.0",
-    "dotenv": "^16.x.x",
+    "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.3.0",
     "express": "^4.21.2",
     "file-saver": "^2.0.5",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.451.0",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
     "next-themes": "^0.3.0",
     "openai": "^4.x.x",
@@ -87,7 +90,8 @@
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "nodemon": "^2.0.12"
   },
   "description": "**URL**: https://lovable.dev/projects/77fa79a2-589d-43f4-86a6-1ce4716c40b8",
   "main": "eslint.config.js",
